qucik fix: Maintenance request are now visible for the owners

--- a/static/output.css
+++ b/static/output.css
@@ -479,6 +479,10 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
   .border-l-4 {
     border-left-style: var(--tw-border-style);
     border-left-width: 4px;
